# OpenGLEngine

./: CMakeLists.txt
GLFW/include/glad/: glad.h
src/: main.cpp  stb_image.h  test.cpp
src/Assets/: config.json
src/Engine/: CursorSprite.cpp  CursorSprite.h  FileManager.cpp  FileManager.h  Game.cpp  Game.h  Object.h  Rect.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Utilities.cpp  Utilities.h
src/Engine/Components/: Component.h  CursorComponent.cpp  CursorComponent.h
src/Engine/Objects/: Object.h  Sprite.cpp  Sprite.h
src/OGL/: EBO.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
